<resources>
    <string name="app_name">IEEE PEC</string>
    <string name="hint_password">Password</string>
    <string name="next_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="main_login_button">Log In</string>
    <string name="main_sign_up_button">Create New Account</string>
    <string name="hint_email_id">Email Id</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="switch_ieee_membership">IEEE Membership</string>
    <string name="hint_ieee_membership_id">IEEE Membership Id</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>
